[project]
name = "mykytaso-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "boto3==1.42.61",
    "botocore==1.42.61",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "crispy-bootstrap5==2026.3",
    "cryptography==46.0.5",
    "django==6.0.3",
    "django-crispy-forms==2.6",
    "django-debug-toolbar==6.2.0",
    "django-recaptcha==4.1.0",
    "django-storages==1.14.6",
    "dotenv==0.9.9",
    "gunicorn==25.1.0",
    "idna==3.11",
    "jmespath==1.1.0",
    "packaging==26.0",
    "pillow==12.1.1",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "pycparser==3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "s3transfer==0.16.0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "urllib3==2.6.3",
    "whitenoise==6.12.0",
]
